WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11451
REGRESSION: Dell.com does not render correctly in ToT (stylesheet not loaded)
https://bugs.webkit.org/show_bug.cgi?id=11451
Summary
REGRESSION: Dell.com does not render correctly in ToT (stylesheet not loaded)
Rosyna
Reported
2006-10-29 14:21:08 PST
Dell.com no longer renders very well at all in ToT WebKit. Thinks that should be hidden are not and things that should be horizontal are vertical. Sadly, I can't describe it much better.
Attachments
Accept stylesheets of any MIME type (but prefer text/css)
(4.25 KB, patch)
2007-01-18 10:22 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-10-29 14:46:25 PST
Safari's activity window shows "unacceptable" status for the oddly-named style file "
http://www.dell.com/css.htm
". (Currently it shows "cancelled" for most other subresources, but the "unacceptable" condition started before that).
mitz
Comment 2
2007-01-18 10:22:36 PST
Created
attachment 12538
[details]
Accept stylesheets of any MIME type (but prefer text/css)
Darin Adler
Comment 3
2007-01-18 11:32:09 PST
Comment on
attachment 12538
[details]
Accept stylesheets of any MIME type (but prefer text/css) The issue here isn't what MIME types we accept, but rather what MIE types we *say* we accept. Good fix. r=me
Mark Rowe (bdash)
Comment 4
2007-01-18 17:32:29 PST
Landed in
r18969
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug