2007-01-18  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11451
          REGRESSION: Dell.com does not render correctly in ToT (stylesheet not loaded)

        Test: http/tests/misc/css-accept-any-type.html

        * loader/CachedCSSStyleSheet.cpp:
        (WebCore::CachedCSSStyleSheet::CachedCSSStyleSheet): Changed the accept header
        for stylesheets to "text/css,*/*;q=0.1" to match Firefox, accepting CSS served
        as any type.

2007-01-18  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11451
          REGRESSION: Dell.com does not render correctly in ToT (stylesheet not loaded)

        * http/tests/misc/css-accept-any-type-expected.txt: Added.
        * http/tests/misc/css-accept-any-type.html: Added.
        * http/tests/misc/resources/stylesheet.php: Added.


Canonical link: https://commits.webkit.org/15947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18969 268f45cc-cd09-0410-ab3c-d52691b4dbfc