third_party/WebKit/LayoutTests/http/tests/misc/resources/stylesheet.php
@@ -1,0 +1,11 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+    if (preg_match("/\*\/\*/", $_SERVER["HTTP_ACCEPT"])) {
+?>
+        p#target { position: relative; }
+        /* This stylesheet is served as text/html */
+<?php
+    } else {
+        header("Not acceptable", true, 406);
+    }
+?>
